--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.23",
     "@mui/material": "^5.15.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,14 +13,19 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "mdbreact": "^5.2.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-csv-downloader": "^3.1.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^3.4.4",
     "react-search-autocomplete": "^8.5.2",
-    "web-vitals": "^2.1.4"
+    "read-excel-file": "^5.7.1",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
