--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.5",
     "@mui/joy": "^5.0.0-beta.23",
     "@mui/material": "^5.15.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,12 +15,15 @@
     "bootstrap": "^5.3.2",
     "mdbreact": "^5.2.0",
     "papaparse": "^5.4.1",
+    "plotly.js": "^2.28.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-csv-downloader": "^3.1.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-icons": "^5.0.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^3.4.4",
     "react-search-autocomplete": "^8.5.2",
@@ -29,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
